--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,6 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 19px;
-  /* font-family: 'Fira Sans', sans-serif; */
   font-family: 'Roboto Condensed', sans-serif;
 }
 
@@ -64,5 +63,48 @@ body {
   color: #fefefe;
   font-size: 18px;
   line-height: 21px;
+}
+
+.top__heading {
+  display: flex;
+  padding: 50px 0 30px;
+}
+
+.top__content {
+  text-align: center;
+  padding-top: 90px;
+  width: 50%;
+}
+
+.top__title {
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 58px;
+  margin:0 auto 20px;
+  max-width: 455px;
+}
+
+.top__text {
+  font-size: 24px;
+  line-height: 28px;
+  margin:0 auto 60px;
+  max-width: 470px;
+}
+
+.btn {
+  text-transform: uppercase;
+  color: #fefefe;
+  background-color: #c5ac2d;
+  padding: 16px 19px 15px;
+  border: 1px solid transparent;
+  transition: all .5s;
+}
+
+.btn:hover {
+  background-color: #fefefe;
+  color: #c5ac2d;
+  border: 1px solid #c5ac2d;
+
 }
 
