--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,46 @@ body {
   background-color: #fefefe;
   color: #c5ac2d;
   border: 1px solid #c5ac2d;
-
 }
 
+.top__slider {
+  width: 50%;
+}
+
+.top__slider .slick-dots {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.slick-dots {
+  list-style: none;
+  text-align: center;
+}
+
+.slick-dots button {
+  font-size: 0;
+  width: 8px;
+  height: 8px;
+  background-color: #332208;
+  border: 0;
+  border-radius: 50%;
+  padding: 0;
+}
+
+.slick-active button {
+  width: 16px;
+  height: 16px;
+}
+
+.top__slider-text {
+  padding-right: 100px;
+  text-align: right;
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 500;
+}
+
+.top__bottom {
+  
+}
