--- a/css/style.css
+++ b/css/style.css
@@ -146,5 +146,45 @@ body {
 }
 
 .top__bottom {
-  
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+.top__items {
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.top__item {
+  border: 1px solid #1b1818;
+  padding: 10px;
+  width: 150px;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+  transition: all .5s;
+}
+
+.top__item:hover {
+  transform: scale(1.25);
+}
+
+.top__links {
+  padding-right: 80px;
+}
+
+.top__link {
+  color: #1b1818;
+  border-bottom: 1px solid #1b1818;
+}
+
+.top__link + .top__link {
+  margin-left: 20px;
 }
